..F....... [ZBX-27658] fixed clipping of the help button’s shadow by an adjacent element

--- a/sass/stylesheets/sass/_screen.scss
+++ b/sass/stylesheets/sass/_screen.scss
@@ -750,7 +750,6 @@ form {
 			display: block;
 			height: 24px;
 			line-height: 24px;
-			overflow: hidden;
 			text-overflow: ellipsis;
 
 			.btn-icon,
