--- a/sass/stylesheets/sass/components/dashboard/_widget-piechart.scss
+++ b/sass/stylesheets/sass/components/dashboard/_widget-piechart.scss
@@ -61,8 +61,8 @@ form.dashboard-widget-piechart {
 				text-align: right;
 				min-width: 60px;
 				max-width: 150px;
-
-				@extend %overflow-ellipsis;
+				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 
 			&:first-child {
