--- a/sass/stylesheets/sass/components/dashboard/_widget-svggraph.scss
+++ b/sass/stylesheets/sass/components/dashboard/_widget-svggraph.scss
@@ -60,8 +60,8 @@ form.dashboard-widget-svggraph {
 				text-align: right;
 				min-width: 80px;
 				max-width: 120px;
-
-				@extend %overflow-ellipsis;
+				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 
 			&:first-child {
